--- a/src/mdttools/mdttesttool/mdtTtBasicTestNodeCalibrationWindow.ui
+++ b/src/mdttools/mdttesttool/mdtTtBasicTestNodeCalibrationWindow.ui
@@ -25,9 +25,9 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QLabel" name="fld_VehicleType">
+       <widget class="QLabel" name="fld_Type">
         <property name="text">
-         <string>                </string>
+         <string/>
         </property>
        </widget>
       </item>
@@ -39,7 +39,7 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QLabel" name="fld_VehicleSubType">
+       <widget class="QLabel" name="fld_SubType">
         <property name="text">
          <string/>
         </property>
