--- a/src/mdttools/mdttesttool/mdtTtTestModelItemEditor.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestModelItemEditor.ui
@@ -7,41 +7,34 @@
     <x>0</x>
     <y>0</y>
     <width>692</width>
-    <height>198</height>
+    <height>233</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QFormLayout" name="formLayout">
-   <item row="0" column="0">
+   <property name="fieldGrowthPolicy">
+    <enum>QFormLayout::ExpandingFieldsGrow</enum>
+   </property>
+   <item row="1" column="0">
     <widget class="QLabel" name="lbSequenceNumber">
      <property name="text">
       <string>Seq. #:</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
+   <item row="1" column="1">
     <widget class="QLineEdit" name="fld_SequenceNumber"/>
    </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="lbDesignationEN">
-     <property name="text">
-      <string>Designation (English):</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
-    <widget class="QLineEdit" name="fld_DesignationEN"/>
-   </item>
-   <item row="2" column="0">
+   <item row="5" column="0">
     <widget class="QLabel" name="lbExpectedValue">
      <property name="text">
       <string>Expected value:</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="5" column="1">
     <widget class="mdtDoubleEdit" name="fld_ExpectedValue">
      <property name="maximumSize">
       <size>
@@ -51,14 +44,14 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item row="6" column="0">
     <widget class="QLabel" name="lbLimitMin">
      <property name="text">
       <string>Limit min:</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="6" column="1">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="mdtDoubleEdit" name="fld_LimitValueMin"/>
@@ -82,14 +75,14 @@
      </item>
     </layout>
    </item>
-   <item row="4" column="0">
+   <item row="7" column="0">
     <widget class="QLabel" name="lbFailMin">
      <property name="text">
       <string>Fail min:</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="7" column="1">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="mdtDoubleEdit" name="fld_FailValueMin"/>
@@ -113,14 +106,14 @@
      </item>
     </layout>
    </item>
-   <item row="5" column="0">
+   <item row="8" column="0">
     <widget class="QLabel" name="lbValueUnit">
      <property name="text">
       <string>Unit:</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="1">
+   <item row="8" column="1">
     <widget class="QComboBox" name="fld_ValueUnit">
      <item>
       <property name="text">
@@ -204,6 +197,26 @@
      </item>
     </widget>
    </item>
+   <item row="3" column="1">
+    <widget class="QLineEdit" name="fld_Key"/>
+   </item>
+   <item row="4" column="1">
+    <widget class="QLineEdit" name="fld_DesignationEN"/>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="lbDesignationEN">
+     <property name="text">
+      <string>Designation (English):</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="lbKey">
+     <property name="text">
+      <string>Key:</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <customwidgets>
@@ -215,7 +228,6 @@
  </customwidgets>
  <tabstops>
   <tabstop>fld_SequenceNumber</tabstop>
-  <tabstop>fld_DesignationEN</tabstop>
  </tabstops>
  <resources/>
  <connections>
