--- a/src/mdttools/mdttesttool/mdtTtTestNodeEditor.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestNodeEditor.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>434</width>
-    <height>125</height>
+    <width>442</width>
+    <height>144</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,7 +26,7 @@
      <item row="0" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QLineEdit" name="leType">
+        <widget class="QLineEdit" name="fld_Type">
          <property name="minimumSize">
           <size>
            <width>250</width>
@@ -55,7 +55,7 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="leSubType">
+      <widget class="QLineEdit" name="fld_SubType">
        <property name="readOnly">
         <bool>true</bool>
        </property>
@@ -69,7 +69,7 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLineEdit" name="leSeriesNumber">
+      <widget class="QLineEdit" name="fld_SeriesNumber">
        <property name="readOnly">
         <bool>true</bool>
        </property>
