--- a/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitEditor.ui
+++ b/src/mdttools/mdttesttool/mdtcablelist/mdtClUnitEditor.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>673</width>
+    <width>684</width>
     <height>206</height>
    </rect>
   </property>
@@ -47,7 +47,7 @@
       <item row="0" column="0">
        <widget class="QLabel" name="lb_SchemaPosition">
         <property name="text">
-         <string>Vehicle schema pos.</string>
+         <string>Vehicle schema pos.:</string>
         </property>
        </widget>
       </item>
@@ -55,13 +55,13 @@
        <widget class="QLineEdit" name="fld_SchemaPosition">
         <property name="minimumSize">
          <size>
-          <width>100</width>
+          <width>150</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>150</width>
+          <width>200</width>
           <height>16777215</height>
          </size>
         </property>
@@ -76,7 +76,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="lb_Alias">
         <property name="text">
-         <string>Alias</string>
+         <string>Alias:</string>
         </property>
        </widget>
       </item>
@@ -84,7 +84,7 @@
        <widget class="QLineEdit" name="fld_Alias">
         <property name="maximumSize">
          <size>
-          <width>150</width>
+          <width>200</width>
           <height>16777215</height>
          </size>
         </property>
@@ -93,7 +93,7 @@
       <item row="2" column="0">
        <widget class="QLabel" name="lb_Cabinet">
         <property name="text">
-         <string>Cabinet</string>
+         <string>Cabinet:</string>
         </property>
        </widget>
       </item>
@@ -101,7 +101,7 @@
        <widget class="QLineEdit" name="fld_Cabinet">
         <property name="maximumSize">
          <size>
-          <width>150</width>
+          <width>200</width>
           <height>16777215</height>
          </size>
         </property>
@@ -110,7 +110,7 @@
       <item row="3" column="0">
        <widget class="QLabel" name="lb_Coordinate">
         <property name="text">
-         <string>Location (or coordinate)</string>
+         <string>Location (or coordinate):</string>
         </property>
        </widget>
       </item>
@@ -118,7 +118,7 @@
        <widget class="QLineEdit" name="fld_Coordinate">
         <property name="maximumSize">
          <size>
-          <width>150</width>
+          <width>200</width>
           <height>16777215</height>
          </size>
         </property>
@@ -145,19 +145,16 @@
       <item row="0" column="0">
        <widget class="QLabel" name="lbArticle_Id_FK">
         <property name="text">
-         <string>Base article ID</string>
+         <string>Base article ID:</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QLineEdit" name="leArticle_Id_FK">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="readOnly">
-           <bool>true</bool>
+         <widget class="QLabel" name="lbl_Article_Id_FK">
+          <property name="text">
+           <string>......</string>
           </property>
          </widget>
         </item>
@@ -173,70 +170,85 @@
       <item row="1" column="0">
        <widget class="QLabel" name="lbArticleCode">
         <property name="text">
-         <string>Article code</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QLineEdit" name="leArticleCode">
-        <property name="readOnly">
-         <bool>true</bool>
+         <string>Article code:</string>
         </property>
        </widget>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="lbArticleDesignationEN">
         <property name="text">
-         <string>Designation (English)</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QLineEdit" name="leArticleDesignationEN">
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QLineEdit" name="leArticleDesignationFR">
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QLineEdit" name="leArticleDesignationDE">
-        <property name="readOnly">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="1">
-       <widget class="QLineEdit" name="leArticleDesignationIT">
-        <property name="readOnly">
-         <bool>true</bool>
+         <string>Designation (English):</string>
         </property>
        </widget>
       </item>
       <item row="3" column="0">
        <widget class="QLabel" name="lbArticleDesignationFR">
         <property name="text">
-         <string>Designation (Frensh)</string>
+         <string>Designation (Frensh):</string>
         </property>
        </widget>
       </item>
       <item row="4" column="0">
        <widget class="QLabel" name="lbArticleDesignationDE">
         <property name="text">
-         <string>Designation (German)</string>
+         <string>Designation (German):</string>
         </property>
        </widget>
       </item>
       <item row="5" column="0">
        <widget class="QLabel" name="lbArticleDesignationIT">
         <property name="text">
-         <string>Designation (Italian)</string>
+         <string>Designation (Italian):</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QLabel" name="lbl_ArticleCode">
+        <property name="text">
+         <string>....</string>
+        </property>
+        <property name="textInteractionFlags">
+         <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLabel" name="lbl_ArticleDesignationEN">
+        <property name="text">
+         <string>....</string>
+        </property>
+        <property name="textInteractionFlags">
+         <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QLabel" name="lbl_ArticleDesignationFR">
+        <property name="text">
+         <string>....</string>
+        </property>
+        <property name="textInteractionFlags">
+         <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QLabel" name="lbl_ArticleDesignationDE">
+        <property name="text">
+         <string>....</string>
+        </property>
+        <property name="textInteractionFlags">
+         <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="1">
+       <widget class="QLabel" name="lbl_ArticleDesignationIT">
+        <property name="text">
+         <string>....</string>
+        </property>
+        <property name="textInteractionFlags">
+         <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
         </property>
        </widget>
       </item>
