--- a/src/mdttools/mdttesttool/mdtTtBasicTesterWindow.ui
+++ b/src/mdttools/mdttesttool/mdtTtBasicTesterWindow.ui
@@ -48,7 +48,7 @@
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="QLabel" name="lbTestDesignationEN">
+          <widget class="QLabel" name="fld_DesignationEN">
            <property name="text">
             <string>designation</string>
            </property>
