--- a/src/mdttools/mdttesttool/mdtTtTestLinkDialog.ui
+++ b/src/mdttools/mdttesttool/mdtTtTestLinkDialog.ui
@@ -72,7 +72,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="lbIdentification">
+       <widget class="QLabel" name="lbTestCableLinkIdentification">
         <property name="text">
          <string>identification</string>
         </property>
