--- a/src/mdttools/mdttesttool/mdtcablelist/mdtClWireEditor.ui
+++ b/src/mdttools/mdttesttool/mdtcablelist/mdtClWireEditor.ui
@@ -35,7 +35,10 @@
      <item row="3" column="1">
       <widget class="mdtDoubleEdit" name="mdtdoubleedit">
        <property name="unit">
-        <string>m</string>
+        <string>m2</string>
+       </property>
+       <property name="wireSectionEditionMode">
+        <bool>false</bool>
        </property>
        <property name="minimum">
         <double>0.000000000000000</double>
